# DataMonitorPro

./: .gitignore  CMakeLists.txt  README.md
.secrets/: db_password.key  weather_api.key
qml/: main.qml  main.qml.autosave
qml/components/: ChartView.qml
qml/styles/: Style.qml
resources/: qml.qrc
src/: main.cpp
src/controllers/: MainController.cpp  MainController.h
src/core/: DataPoint.cpp  DataPoint.h  DataProcessor.cpp  DataProcessor.h  secretmanager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/export/: ReportExporter.cpp  ReportExporter.h
src/graphics/: GraphWindow.cpp  GraphWindow.h  graphwidget.cpp  graphwidget.h
src/models/: DataModel.cpp  DataModel.h
src/network/: DataServer.cpp  DataServer.h  WeatherFetcher.cpp  WeatherFetcher.h  WebSocketServer.cpp  WebSocketServer.h
